Fixed appearence of scrollbars(used media queries)
Added: media queries for different viewport sizes

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 .sidebar {
   background:rgb(247, 246, 243);
   min-width: 150px;
-  flex-basis: 15vw;
+  flex-basis: 20vw;
   flex-shrink: 0;
 }
 
@@ -41,7 +41,7 @@ body {
 
 /* page-related parameters */
 .page {
-  width: 85vw;
+  width: 80vw;
   margin-right: auto;
 }
 
@@ -163,4 +163,30 @@ pre code {
   text-align: center;
   /* margin-left: auto;
   margin-right: auto; */
+}
+
+@media (max-width: 1200px) {
+  .sidebar {
+    background:rgb(247, 246, 243);
+    min-width: 150px;
+    flex-basis: 25vw;
+    flex-shrink: 0;
+  }
+  .page {
+    width: 75vw;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 1000px) {
+  .sidebar {
+    background:rgb(247, 246, 243);
+    min-width: 150px;
+    flex-basis: 30vw;
+    flex-shrink: 0;
+  }
+  .page {
+    width: 70vw;
+    margin-right: auto;
+  }
 }
